# gh_serializer

./: .gitignore  README.md  gh_serializer.json  pyproject.toml
gh_serializer/examples/: __init__.py  demo.py
gh_serializer/gh_serializer/: __init__.py  fetch.py  run.py  serialize.py
gh_serializer/gh_serializer/static/: __init__.py  file_types.py
